fixed on subsubsection command

--- a/SnowmassStyle/Computing/E3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E3-executiveSummary.tex
@@ -93,7 +93,7 @@ Geant4. Such expertise is in high demand within the Intensity Frontier community
 at Fermilab and elsewhere could fulfill this need of the
 wider Intensity Frontier community if this was promoted and properly funded.
 
-\subsubection{Access to Dedicated and Shared Resources}
+\subsubsection{Access to Dedicated and Shared Resources}
 In general, demands for computing resources of Intensity Frontier experiments are modest compared to those of the EF
 experiments.  However, those needs are not insignificant, and all experiments
 require at least 1,000 dedicated batch slots to ensure timely physics results. 
