Updating I2 docs per editor suggestions

--- a/SnowmassStyle/CpF-I2/wgreport.tex
+++ b/SnowmassStyle/CpF-I2/wgreport.tex
@@ -29,7 +29,7 @@ In this report for the Snowmass Computing Frontier Study, we consider several qu
 
 \section{Current HEP Use of the U.S. National Computing Infrastructure}
 
-Different computational problems in particle physics are naturally suited for different kinds of computing facilities.  In general, there are two paradigms.  One is high-throughput computing (HTC), which is implemented in standard commodity computers and can address problems that are ``embarrassingly parallel,'' i.e., those that can be computed independently with the results combined afterward.  The other is high performance computing (HPC), which uses supercomputers to solve large problems by distributing computational work among many processors and using specialized high-speed, low-latency networks to communicate partial results among processors during execution of the job.
+Different computational problems in particle physics are naturally suited for different kinds of computing facilities.  In general, there are two paradigms.  One is HTC, which is implemented in standard commodity computers and can address problems that are ``embarrassingly parallel,'' i.e., those that can be computed independently with the results combined afterward.  The other is HPC, which uses supercomputers to solve large problems by distributing computational work among many processors and using specialized high-speed, low-latency networks to communicate partial results among processors during execution of the job.
 
 Historically, HPC machines for open science have been located at specialized national centers funded by the 
 Department of Energy and the National 
@@ -150,7 +150,7 @@ Figure \ref{fig:OSG-growth} shows the steady growth in OSG usage over the past s
 \label{fig:OSG-growth}
 \end{figure}
 
-For energy-frontier experiments such as CMS and ATLAS, with aggregate datasets in the tens of petabytes, the grid is the default location for most of the computing activity.  The LHC experiments are unusual in the history of particle physics in that it was planned from the very beginning that most of the computing activity would take place away from the host laboratory.  About 5/6 of the total CPU and disk available to the experiments is not at CERN but at distributed sites.  The CERN facility is only responsible for a first-pass reconstruction of the data shortly after they are recorded, plus some calibration and alignment activities.  Everything else required to perform a physics measurement -- re-processing with improved calibration and alignment, skimming to produce datasets more concentrated in events of interest, Monte Carlo simulation production and archiving, and final-stage user data analysis -- is conducted over the grid.  Most of the workflows described above are centrally managed by operations teams who decide which grid resources are used for which workflows.  The exception to this is user analysis, which is in the hands of individual physicists.  Historically, users have been constrained to submit their jobs to grid sites have a copy of the data sample that they wish to analyze.  However, this constraint has recently been relaxed through the deployment of Xrootd data access over the wide-area network, as discussed below.
+For Energy Frontier experiments such as CMS and ATLAS, with aggregate datasets in the tens of petabytes, the grid is the default location for most of the computing activity.  The LHC experiments are unusual in the history of particle physics in that it was planned from the very beginning that most of the computing activity would take place away from the host laboratory.  About 5/6 of the total CPU and disk available to the experiments is not at CERN but at distributed sites.  The CERN facility is only responsible for a first-pass reconstruction of the data shortly after they are recorded, plus some calibration and alignment activities.  Everything else required to perform a physics measurement -- re-processing with improved calibration and alignment, skimming to produce datasets more concentrated in events of interest, Monte Carlo simulation production and archiving, and final-stage user data analysis -- is conducted over the grid.  Most of the workflows described above are centrally managed by operations teams who decide which grid resources are used for which workflows.  The exception to this is user analysis, which is in the hands of individual physicists.  Historically, users have been constrained to submit their jobs to grid sites have a copy of the data sample that they wish to analyze.  However, this constraint has recently been relaxed through the deployment of Xrootd data access over the wide-area network, as discussed below.
 
 Figure \ref{fig:OSG-usage} below shows OSG usage by virtual organization over the past year.  We see that ATLAS and CMS dominate the OSG, using about six million CPU hours per week.  Contrariwise, it should be noted that US-based grid computing resources play an outsized role in LHC computing, relative to the US-based fraction of the experimental collaborations.  For instance, on CMS the US grid sites provided about 40\% of the CPU time over the past year, while only about 1/3 of CMS membership is from the US.  The equivalent numbers for ATLAS are about 30\% of the CPU time and about 20\% of the collaboration. Besides being the biggest customer of CPU time, the LHC experiments are also the largest provider of processing resources, which can be opportunistically available to other VOs.  Thus we can see that the LHC experiments, the Open Science Grid and the US LHC users are all interdependent on each other for their success.
 
@@ -214,7 +214,7 @@ There has been a major push to involve a wide range of sciences in grid computin
 
 \section{What role will national computing centers play in computations for HEP?}
 
-The U.S. national high performance computing (HPC) centers run by the Department of Energy Office of Science and the National Science Foundation have traditionally served the particle physics and high energy physics (HEP) communities by enabling and supporting large simulations in Lattice Quantum Chromodynamics (LQCD), accelerator research and design, cosmology, and supernova physics. The astrophysics community has also used HPC centers to produce mock catalogs in support of satellite and ground-based sky surveys.
+The U.S. national HPC centers run by the Department of Energy Office of Science and the National Science Foundation have traditionally served the particle physics and high energy physics (HEP) communities by enabling and supporting large simulations in Lattice Quantum Chromodynamics (LQCD), accelerator research and design, cosmology, and supernova physics. The astrophysics community has also used HPC centers to produce mock catalogs in support of satellite and ground-based sky surveys.
  
 Over the next fine to ten years HPC centers are expected to continue their roles with these traditional communities. However, the computational and storage resources needed to support upcoming initiatives in part sponsored by the Department of Energy Office of Science -- including the LHC upgrade and  the Large Synoptic Sky Survey -- will stress the ability of HPC centers, even if they are able to continue the traditional HPC growth rate of 1.8-2.0 X per year.
 
@@ -338,13 +338,13 @@ of computational power in a time of greater need.
  
 \section{Summary}
 \label{sec:comp-summary}
-Powerful distributed computing and robust facility infrastructures are essential to the continued progress of particle physics across all of its defined frontiers of experimental approaches.  Those approaches, and the theoretical work needed to support them, require a combination of both HTC and HPC systems.  The dominant consumers of HTC are the LHC experiments, who have been well served by it and should be in the future also.  Most intensity-frontier experiments can be supported by HTC also.  HPC is needed for applications such as lattice QCD, accelerator design and R\&D, data analysis and synthetic maps, N-body and hydro-cosmology simulations, supernova modeling, and more recently perturbative QCD.  HPC tasks have historically been carried out at national centers that have focused primarily on HPC facilities, but these centers have begun to embrace the problems that are addressed by HTC and are interested in attracting scientists who want to work at these centers.
+Powerful distributed computing and robust facility infrastructures are essential to the continued progress of particle physics across the Energy, Intensity, and Cosmic Frontiers.  Those approaches, and the theoretical work needed to support them, require a combination of both HTC and HPC systems.  The dominant consumers of HTC are the LHC experiments, who have been well served by it and should be in the future also.  Most Intensity Frontier experiments can be supported by HTC also.  HPC is needed for applications such as lattice QCD, accelerator design and R\&D, data analysis and synthetic maps, N-body and hydro-cosmology simulations, supernova modeling, and more recently perturbative QCD.  HPC tasks have historically been carried out at national centers that have focused primarily on HPC facilities, but these centers have begun to embrace the problems that are addressed by HTC and are interested in attracting scientists who want to work at these centers.
 
-Energy-frontier experiments face a growth in data that will make it a challenge to supply the needed computing resources.  Doing so is possible as long as certain conditions are in place and specific steps are taken to keep up with evolving technologies.  It requires near-constant funding of the WLCG, greater efficiencies in resource usage, and the evolution of software to take advantage of multicore processor architectures.  These experiments should also pursue and take advantage of opportunistic resources, be they in commercial clouds (which are not currently viable as purchased resources), universities, DOE centers or elsewhere.  The experiments would also benefit from further engagement with national HPC centers, which have resources available to HEP experiments and can support efforts to make use of HPC systems that have not traditionally been used for HTC applications for applications such as detector simulations.
+Energy Frontier experiments face a growth in data that will make it a challenge to supply the needed computing resources.  Doing so is possible as long as certain conditions are in place and specific steps are taken to keep up with evolving technologies.  It requires near-constant funding of the WLCG, greater efficiencies in resource usage, and the evolution of software to take advantage of multicore processor architectures.  These experiments should also pursue and take advantage of opportunistic resources, be they in commercial clouds (which are not currently viable as purchased resources), universities, DOE centers or elsewhere.  The experiments would also benefit from further engagement with national HPC centers, which have resources available to HEP experiments and can support efforts to make use of HPC systems that have not traditionally been used for HTC applications for applications such as detector simulations.
 
-Intensity-frontier experiments have smaller computing needs in comparison, and there is nothing technically that prevents them from being met.  Such experiments should be aware of the existence of resources available to them through the OSG or at national computing centers, and they could benefit from a coordinated effort amongst them to gain access to resources and share software and training.
+Intensity Frontier experiments have smaller computing needs in comparison, and there is nothing technically that prevents them from being met.  Such experiments should be aware of the existence of resources available to them through the OSG or at national computing centers, and they could benefit from a coordinated effort amongst them to gain access to resources and share software and training.
 
-Cosmic-frontier experiments and the simulations needed to interpret them are among the drivers of a need for growth in HPC resources in the coming years, along with lattice QCD and accelerator design.  Indeed, demand for access to HPC across HEP is expected to exceed the expected availability.  
+Cosmic Frontier experiments and the simulations needed to interpret them are among the drivers of a need for growth in HPC resources in the coming years, along with lattice QCD and accelerator design.  Indeed, demand for access to HPC across HEP is expected to exceed the expected availability.  
 Such computations are critically needed to interpret results from a number of important experiments and realize scientific returns from national investments in those experiments.  The NERSC report on HEP computing needs indicates a shortage of HPC resources needed for HEP by a factor of four by 2017.  While funding and technology development needed to sustain traditional HPC growth rates are uncertain, they must be maintained to support HEP science.
 
 Distributed computing infrastructures, which have been critical to the success of the LHC experiments, should continue to be able to serve these and other applications even as they grow in scale.  There are no show-stoppers seen in increasing scale, but various developments should be purused to improve efficiency and ease of use.  Keeping sufficient staff support at a reasonable cost is a continuing concern; finding operational efficiencies could help address this.  Given that HEP is the largest user of distributed scientific computing, currently in the form of grid computing, members of the field must continue to take a leadership role in its development.
