Edited my affiliation

--- a/SnowmassStyle/Computing/authorlist.tex
+++ b/SnowmassStyle/Computing/authorlist.tex
@@ -30,7 +30,7 @@ Stefan Hoeche (SLAC), Laura Reina (FSU);
 Observer Markus Wobisch (Louisiana Tech);
 
 Distributed Computing and Facility Infrastructures Sub-Group Conveners: 
-Ken Bloom (U.Nebraska/Lincoln), Sudip Dosanjh (LBL), Richard Gerber (NERSC)
+Ken Bloom (U.Nebraska/Lincoln), Richard Gerber (NERSC/LBNL)
 
 Networking Sub-Group Conveners: 
 Gregory Bell (LBNL), Michael Ernst (BNL);
